--- a/css/visual.css
+++ b/css/visual.css
@@ -10,7 +10,7 @@
 }
 
 :root {
-    --cor_menus: #0000FF;
+    --cor_principal: #0000FF;
 }
 
 /*===Cabeçalho===*/
@@ -18,11 +18,18 @@
     display: flex;
     padding: 15px;
     justify-content: space-between;
+    border-bottom: #DCDCDC solid 1px;
+    box-shadow: 0 5px 10px #DCDCDC;
+}
+
+.nome {
+    padding-left: 100px;
 }
 
 .menus {
     display: flex;
     gap: 30px;
+    padding-right: 100px;
 }
 
 .menus h1 a{
@@ -33,7 +40,7 @@
 }
 
 .menus h1 a:hover{
-    color: var(--cor_menus);
+    color: var(--cor_principal);
 }
 
 .menus h1 a::before {
@@ -41,7 +48,7 @@
     height: 3px;
     width: 100%;
     position: absolute;
-    background-color: var(--cor_menus);
+    background-color: var(--cor_principal);
     bottom: 2px;
     transform: scaleX(0);
     transform-origin: left;
@@ -66,6 +73,41 @@
 }
 
 .texto {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
     color: black;
-    width: 20%;
+    width: 20%; 
 }
+
+.botao {
+    padding: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 20px;
+    background-color: var(--cor_principal);
+    border: none;
+    transition: background-color 0.5s ease;
+    cursor: pointer;
+}
+
+.botao:hover {
+    background-color: #000080;
+}
+
+.botao a {
+    color: white;
+    text-decoration: none;
+}
+
+/*===Rodapé===*/
+
+footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    margin: 50px;
+}
+
+
+
