--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
         <section class="menus">
             <h1><a href="../templates/home.html">Home</a></h1>
             <h1><a href="../templates/portifolio.html">Portifólio</a></h1>
-            <h1><a href="">Sobre</a></h1>
+            <h1><a href="../templates/sobre.html">Sobre</a></h1>
         </section>
     </header>
     <main class="principal">
@@ -22,7 +22,7 @@
             <img src="../img/perfil2.png" alt="Foto de Perfil" width="300">
         </section>
         <section class="texto">
-            <h1>Olá,<p>me chamo <span style="color: #0000FF">Davi Feitosa</span><p>sou Programador</h1>
+            <h1>Olá,<p>me chamo <span style="color: #0000FF">Davi Feitosa</span><p>e sou Programador</h1>
             <section>
                 <button class="botao"><a href="">Contato</a></button>
             </section>
