--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/visual.css">
-    <link rel="stylesheet" href="../css/visual-portifolio.css">
+    <link rel="stylesheet" href="../css/visual-sobre.css">
     <title>Davi - Portifólio</title>
 </head>
 <body>
@@ -18,8 +18,13 @@
             <h1><a href="../templates/sobre.html">Sobre</a></h1>
         </section>
     </header>
-    <main>
-
+    <main class="sobre">
+        <section>
+            <h1>Sobre Mim:</h1>
+            <p>
+                Me chamo Davi Feitosa, atualmente estou cursando Ciência da Computação na Universidade Federal de Jataí e trabalho também como Freelancer em Javascript e C#
+            </p>
+        </section>
     </main>
 </body>
 </html>
