adição de algumas alterações

--- a/templates/portifolio.html
+++ b/templates/portifolio.html
@@ -18,7 +18,8 @@
             <h1><a href="../templates/sobre.html">Sobre</a></h1>
         </section>
     </header>
-    <main>
+    <main class="principal-port">
+        <h2>Confira meus projetos mais recentes</h2>
 
     </main>
 </body>
