--- a/css/visual-portifolio.css
+++ b/css/visual-portifolio.css
@@ -1,6 +1,34 @@
+:root {
+    --cor-principal: #0000FF;
+    --cor-secundaria: #DCDCDC;
+}
+
 .principal-port {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding-top: 50px;
+    gap: 20px;
+}
+
+.item-port {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    gap: 5px;
+    border-radius: 10px;
+    border: 1px solid var(--cor-secundaria);
+    box-shadow: 0px 15px 10px var(--cor-secundaria);
+    transition: border-color 0.3s ease;
+    transition: box-shadow 0.5s ease;
+}
+
+.item-port-a {
+    text-decoration: none;
+    color: black;
+}
+
+.item-port:hover {
+    border-color: var(--cor-principal);
+    box-shadow: 5px 5px 5px var(--cor-secundaria);
 }
