--- a/templates/portifolio.html
+++ b/templates/portifolio.html
@@ -20,50 +20,9 @@
     </header>
     <main class="principal-port">
         <h2>Confira meus projetos mais recentes</h2>
-        <section class="main-port">
-            <a href="" class="item-port-a">
-                <section class="item-port">
-                    <img src="../img/Captura de tela 2024-05-12 025752.png" alt="Imagem1" width="350">
-                    <h3>titulo</h3>
-                    <p>descrição</p>
-                </section>            
-            </a>
-            <a href="" class="item-port-a">
-                <section class="item-port">
-                    <img src="../img/Captura de tela 2024-05-12 025752.png" alt="Imagem1" width="350">
-                    <h3>titulo</h3>
-                    <p>descrição</p>
-                </section>            
-            </a>
-            <a href="" class="item-port-a">
-                <section class="item-port">
-                    <img src="../img/Captura de tela 2024-05-12 025752.png" alt="Imagem1" width="350">
-                    <h3>titulo</h3>
-                    <p>descrição</p>
-                </section>            
-            </a>
-            <a href="" class="item-port-a">
-                <section class="item-port">
-                    <img src="../img/Captura de tela 2024-05-12 025752.png" alt="Imagem1" width="350">
-                    <h3>titulo</h3>
-                    <p>descrição</p>
-                </section>            
-            </a>
-            <a href="" class="item-port-a">
-                <section class="item-port">
-                    <img src="../img/Captura de tela 2024-05-12 025752.png" alt="Imagem1" width="350">
-                    <h3>titulo</h3>
-                    <p>descrição</p>
-                </section>            
-            </a>
-            <a href="" class="item-port-a">
-                <section class="item-port">
-                    <img src="../img/Captura de tela 2024-05-12 025752.png" alt="Imagem1" width="350">
-                    <h3>titulo</h3>
-                    <p>descrição</p>
-                </section>            
-            </a>
+        <section class="main-port" id="apiReposit">
         </section>
     </main>
+    <script src="../app/api.js"></script>
 </body>
 </html>
