Criação icon carregamento
criação do icone de carregamento

--- a/templates/portifolio.html
+++ b/templates/portifolio.html
@@ -8,6 +8,11 @@
     <title>Davi - Portifólio</title>
 </head>
 <body>
+    <div id="botao-loading">
+        <div class="carregamentoDeTela"></div>
+        <p>Carregando...</p>
+    </div>
+
     <header class="cabecalho">
         <section class="nome">
             <h1>Davi</h1>
