Criação da tela de loading

--- a/templates/portifolio.html
+++ b/templates/portifolio.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/visual.css">
     <link rel="stylesheet" href="../css/visual-portifolio.css">
+    <link rel="stylesheet" href="../css/loading.css">
     <title>Davi - Portifólio</title>
 </head>
 <body>
     <div id="botao-loading">
-        <div class="carregamentoDeTela"></div>
+        <div class="carregamento-tela"></div>
         <p>Carregando...</p>
     </div>
 
