--- a/templates/home.html
+++ b/templates/home.html
@@ -22,7 +22,7 @@
             <img src="../img/perfil2.png" alt="Foto de Perfil" width="300">
         </section>
         <section class="texto">
-            <h1>Olá,<p>me chamo <span style="color: #0000FF">Davi Feitosa</span><p>e sou Programador</h1>
+            <h1>Olá,me chamo <span style="color: #0000FF">Davi Feitosa</span><p>e sou <span class="ponteiro" style="color: #0000FF;">Programador</span></h1>
             <section>
                 <button class="botao"><a href="">Contato</a></button>
             </section>
@@ -34,8 +34,9 @@
             <a href=""><img src="../img/youtube.png" alt="Youtube" width="35"></a>
             <a href=""><img src="../img/instagram.png" alt="Youtube" width="35"></a>
             <a href=""><img src="../img/linkedin.png" alt="Youtube" width="35"></a>
-            <a href=""><img src="../img/icons8-github-64.png" alt="Youtube" width="35"></a>
+            <a href="https://github.com/DaviFeitosa21" target="_blank"><img src="../img/icons8-github-64.png" alt="Youtube" width="35"></a>
         </section>
     </footer>
+    <script src="../app/api.js"></script>
 </body>
 </html>
