adição dos links das minhas redes
adição feita na home

--- a/templates/home.html
+++ b/templates/home.html
@@ -31,9 +31,9 @@
     <footer>
         <h4>Minhas redes sociais:</h4>
         <section>
-            <a href=""><img src="../img/youtube.png" alt="Youtube" width="35"></a>
-            <a href=""><img src="../img/instagram.png" alt="Youtube" width="35"></a>
-            <a href=""><img src="../img/linkedin.png" alt="Youtube" width="35"></a>
+            <a href="https://www.youtube.com/channel/UC79l8euV0gNyuXdqVeVshCA" target="_blank"><img src="../img/youtube.png" alt="Youtube" width="35"></a>
+            <a href="https://www.instagram.com/davisfeitosa21/" target="_blank"><img src="../img/instagram.png" alt="Youtube" width="35"></a>
+            <a href="https://www.linkedin.com/in/davi-feitosa-a50838221/" target="_blank"><img src="../img/linkedin.png" alt="Youtube" width="35"></a>
             <a href="https://github.com/DaviFeitosa21" target="_blank"><img src="../img/icons8-github-64.png" alt="Youtube" width="35"></a>
         </section>
     </footer>
