alteração na API

--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -20,9 +20,9 @@
     </header>
     <main class="sobre">
         <section>
-            <h1>Sobre Mim:</h1>
+            <h1>Sobre Mim</h1>
             <p>
-                Me chamo Davi Feitosa, atualmente estou cursando Ciência da Computação na Universidade Federal de Jataí e trabalho também como Freelancer em Javascript e C#
+                Me chamo Davi Feitosa, atualmente estou cursando Ciência da Computação na Universidade Federal de Jataí e trabalho também como Freelancer
             </p>
         </section>
     </main>
