--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -25,6 +25,25 @@
                 Me chamo Davi Feitosa, atualmente estou cursando Ciência da Computação na Universidade Federal de Jataí e trabalho também como Freelancer
             </p>
         </section>
+        <section>
+            <h1>Linguagens que utilizo</h1>
+            <section class="linguagens">
+                <section>
+                    <h1>Front-End</h1>
+                    <ul>
+                        <li>item1</li>
+                        <li>item2</li>
+                    </ul>
+                </section>
+                <section>
+                    <h1>Back-End</h1>
+                    <ul>
+                        <li>item1</li>
+                        <li>item2</li>
+                    </ul>
+                </section>
+            </section>
+        </section>
     </main>
 </body>
 </html>
