alteração do sobre

--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -31,8 +31,8 @@
                 <section>
                     <h1>Front-End</h1>
                     <ul>
-                        <li>item1</li>
-                        <li>item2</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
                     </ul>
                 </section>
                 <section>
