adição de linhas no sobre

--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -33,13 +33,16 @@
                     <ul>
                         <li>HTML</li>
                         <li>CSS</li>
+                        <li>JavaScript</li>
+                        <li>React</li>
                     </ul>
                 </section>
                 <section>
                     <h1>Back-End</h1>
                     <ul>
-                        <li>item1</li>
-                        <li>item2</li>
+                        <li>C#</li>
+                        <li>Java</li>
+                        <li>Delphi</li>
                     </ul>
                 </section>
             </section>
