--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -25,7 +25,7 @@
                 Me chamo Davi Feitosa, atualmente estou cursando Ciência da Computação na Universidade Federal de Jataí e trabalho também como Freelancer
             </p>
         </section>
-        <section>
+        <section class="linguagem">
             <h1>Linguagens que utilizo</h1>
             <section class="linguagens">
                 <section>
